# PieChartProject

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  PieChart  README.md  cmake_install.cmake  main.c  pie_chart.c  pie_chart.h
include/: controller.h  model.h  utils.h  view.h
savecode/: exmain  pie_chart_code initial
src/: main.c
src/controller/: controller.c
src/model/: model.c
src/view/: view.c
